part1/ping-pong-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpongapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongapp
  template:
    metadata:
      labels:
        app: pingpongapp
    spec:
      containers:
        - name: pingpongapp
          image: dareedyone/ping-pong-app
