part1/ping-pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpongapp-svc 
spec:
  type: ClusterIP
  selector:
    app: pingpongapp
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
